Allow Vercel and localhost origins in CORS configuration